--- a/src/app/shared/fin-forms/fin-button/fin-button.component.html
+++ b/src/app/shared/fin-forms/fin-button/fin-button.component.html
@@ -1,7 +1,6 @@
 <button 
     [class]="classes"
-    [disabled]="disabled"
-    (click)="handleClick($event)">
+    [disabled]="disabled">
     <mat-icon *ngIf="startIcon" class="material-symbols-outlined">{{ startIcon }}</mat-icon>
   <ng-content></ng-content>
 </button>
