--- a/src/app/shared/fin-toast/fin-toast.component.scss
+++ b/src/app/shared/fin-toast/fin-toast.component.scss
@@ -11,7 +11,7 @@
             @apply bg-red-500;
         }
         &.info {
-            @apply bg-blue-500;
+            @apply bg-indigo-500;
         }
         &.warning {
             @apply bg-yellow-500;
