--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,20 +1,32 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav [opened]="!isMobile" [mode]="isMobile ? 'over' : 'side'" class="bg-white border-0">
-        <mat-nav-list class="flex flex-col">
+    <mat-sidenav [opened]="!isMobile" [mode]="isMobile ? 'over' : 'side'">
+        <mat-nav-list class="flex flex-col h-[calc(100vh-112px)]">
             <div class="flex-center mx-6 mt-6 mb-16">
                 <img class="h-6" alt="logo" [src]="themeSwitcher.theme() === 'dark' ? DARK_LOGO_URL : LOGO_URL">
             </div>
-            <ul>
-                @for (item of items; track item.route) {
-                    <li [routerLink]="item.route" routerLinkActive="active" class="default-text flex items-center justify-start gap-2 pl-5 py-2 cursor-pointer text-sm">
-                        <mat-icon class="material-icons-outlined w-5 h-5 text-[1.25rem]">{{ item.icon }}</mat-icon>
-                        <a>{{ item.name }}</a>
+            <nav class="flex flex-col justify-between h-full">
+                <ul>
+                    @for (item of items; track item.route) {
+                        <li [routerLink]="item.route" routerLinkActive="active">
+                            <mat-icon class="material-icons-outlined w-5 h-5 text-[1.25rem]">{{ item.icon }}</mat-icon>
+                            <a>{{ item.name }}</a>
+                        </li>
+                    }
+                </ul>
+                <ul>
+                    <li>
+                        <mat-icon class="material-icons-outlined w-5 h-5 text-[1.25rem]">settings</mat-icon>
+                        <a>Configurações</a>
                     </li>
-                }
-            </ul>
+                    <li>
+                        <mat-icon class="material-icons-outlined w-5 h-5 text-[1.25rem]">info</mat-icon>
+                        <a>Ajuda</a>
+                    </li>
+                </ul>
+            </nav>
         </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content class="min-h-screen bg-sidenav dark:bg-gray-900">
+    <mat-sidenav-content class="min-h-screen bg-white dark:bg-gray-900">
         <header-component>
             <mat-icon *ngIf="isMobile" (click)="toggleMenu()">menu</mat-icon>
         </header-component>
