--- a/src/app/shared/fin-forms/fin-autocomplete/fin-autocomplete.component.html
+++ b/src/app/shared/fin-forms/fin-autocomplete/fin-autocomplete.component.html
@@ -11,13 +11,13 @@
         <li
           *ngFor="let item of filteredItems"
           (click)="selectItem(item)"
-          class="cursor-pointer px-4 py-2 hover:bg-blue-500 hover:text-white dark:hover:bg-blue-600"
+          class="cursor-pointer px-4 py-2 hover:bg-indigo-500 hover:text-white dark:hover:bg-primary"
         >
           {{ item[displayProperty] }}
         </li>
         <li
           (click)="onAddNew()"
-          class="cursor-pointer px-4 py-2 text-blue-500 hover:bg-blue-100 dark:hover:bg-blue-600 dark:text-blue-400">
+          class="cursor-pointer px-4 py-2 text-indigo-500 hover:bg-indigo-100 dark:hover:bg-primary dark:text-indigo-400">
           Novo
         </li>
       </ul>
