--- a/src/app/shared/fin-forms/fin-date-picker/fin-date-picker.component.html
+++ b/src/app/shared/fin-forms/fin-date-picker/fin-date-picker.component.html
@@ -1,3 +1,3 @@
-<fin-input [matDatepicker]="picker" id="date" required [formControlName]="controlName" />
-<mat-datepicker #picker></mat-datepicker>
+<fin-input [matDatepicker]="picker" id="date" required [formControlName]="controlName" [initialValue]="initialValue" />
 <mat-icon (click)="picker.open()">calendar_month</mat-icon>
+<mat-datepicker #picker></mat-datepicker>
