--- a/src/app/shared/fin-forms/fin-input/fin-input.component.html
+++ b/src/app/shared/fin-forms/fin-input/fin-input.component.html
@@ -5,7 +5,7 @@
   [type]="type" 
   [id]="id" 
   [name]="name" 
-  [value]="value || ''" 
+  [value]="value" 
   (input)="onInputChange($event)"
   [placeholder]="placeholder" 
   [autocomplete]="autocomplete"
@@ -20,7 +20,7 @@
   [type]="type" 
   [id]="id" 
   [name]="name" 
-  [value]="value || ''" 
+  [value]="value" 
   (input)="onInputChange($event)"
   [placeholder]="placeholder" 
   [autocomplete]="autocomplete"
