--- a/src/app/views/bank-account-transactions/components/modal-add/modal-add.component.scss
+++ b/src/app/views/bank-account-transactions/components/modal-add/modal-add.component.scss
@@ -9,8 +9,8 @@ form {
     }
 
     button {
-        @apply text-white bg-blue-700 hover:bg-blue-800 
-        focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center 
-        dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800;
+        @apply text-white bg-indigo-700 hover:bg-indigo-800 
+        focus:ring-4 focus:outline-none focus:ring-indigo-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center 
+        dark:bg-primary dark:hover:bg-indigo-700 dark:focus:ring-indigo-800;
     }
 }
