--- a/src/app/shared/fin-forms/fin-input/fin-input.component.scss
+++ b/src/app/shared/fin-forms/fin-input/fin-input.component.scss
@@ -1,4 +1,14 @@
 :host {
+    &.ng-touched.ng-invalid {
+        input {
+            @apply border-error;
+
+            &::placeholder {
+                // color: red;
+            }
+        }
+    }
+
     input {
         @apply h-full border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 
             dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
