--- a/src/app/core/components/fin-toast/fin-toast.component.html
+++ b/src/app/core/components/fin-toast/fin-toast.component.html
@@ -1,4 +1,4 @@
-<div class="fixed top-4 right-4 flex flex-col gap-2 z-50">
+<div class="fixed top-4 right-4 flex flex-col gap-2 z-[9999]">
     <div *ngFor="let toast of toastService.toasts$ | async" [class]="'toast ' + toast.type">
       <span>{{ toast.message }}</span>
       <mat-icon
