--- a/src/app/core/components/sidenav/components/header/header.component.html
+++ b/src/app/core/components/sidenav/components/header/header.component.html
@@ -17,7 +17,7 @@
         </mat-menu>
     
         <div class="flex-center cursor-pointer w-9 h-9 rounded-full bg-primary text-text-dark relative
-                after: content-[''] after:absolute after:w-2.5 after:h-2.5 after:bg-red-500 after:rounded-full after:top-0 after:right-0">
+                after: content-[''] after:absolute after:w-2.5 after:h-2.5 after:bg-error after:rounded-full after:top-0 after:right-0">
             <mat-icon class="material-icons-outlined" class="w-5 h-5 text-[1.25rem]">notifications</mat-icon>
         </div>
     
