--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="w-full max-w-sm p-6 bg-white rounded-lg shadow-lg">
       <h2 class="text-2xl font-bold text-center text-gray-800">Bem-vindo de volta!</h2>
       <p class="mt-2 text-sm text-center text-gray-500">Acesse sua conta</p>
-      <form class="mt-6 space-y-4" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+      <form class="mt-6 space-y-4" [formGroup]="formGroup">
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
           <fin-input 
@@ -28,29 +28,16 @@
         </div>
         <div class="flex items-center justify-between">
           <label class="inline-flex items-center">
-            <input type="checkbox" class="w-4 h-4 text-indigo-500 border-gray-300 rounded focus:ring-indigo-400" />
+            <input type="checkbox" class="w-4 h-4 text-primary border-gray-300 rounded focus:ring-indigo-400" />
             <span class="ml-2 text-sm text-gray-600">Lembrar senha</span>
           </label>
-          <a href="#" class="text-sm text-indigo-500 hover:underline">Esqueceu sua senha?</a>
+          <a href="#" class="text-sm text-primary hover:underline">Esqueceu sua senha?</a>
         </div>
-        <button 
-          type="submit" 
-          class="w-full px-4 py-2 text-sm font-medium text-white bg-indigo-500 rounded-md hover:bg-indigo-600 focus:ring-2 focus:ring-indigo-500 focus:outline-none"
-          [disabled]="loadingService.isLoading() | async"
-        >
-          @if(!(loadingService.isLoading() | async)) {
-            Login
-          } @else {
-            <svg class="w-5 h-5 mx-auto animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-              <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-              <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"></path>
-            </svg>
-          }
-        </button>
+        <fin-button (click)="onSubmit()" type="submit">Login</fin-button>
       </form>
       <p class="mt-6 text-sm text-center text-gray-600">
         Não tem uma conta? 
-        <a class="text-indigo-500 hover:underline" routerLink="/auth/register">Cadastre-se</a>
+        <a class="text-primary hover:underline" routerLink="/auth/register">Cadastre-se</a>
       </p>
     </div>
   </div>
