--- a/src/app/views/dashboard/components/expenses-card/expenses-card.component.html
+++ b/src/app/views/dashboard/components/expenses-card/expenses-card.component.html
@@ -8,7 +8,7 @@
                 <span class="text-gray-800">Previsto</span>
             </div>
             <div class="flex flex-col">
-                <span class="font-bold text-red-600">R$ 2,562.20</span>
+                <span class="font-bold text-error">R$ 2,562.20</span>
                 <span class="font-bold text-gray-800">R$ 5,562.20</span>
             </div>
         </div>
