--- a/src/app/core/components/sidenav/components/header/components/date-view/components/year-view/year-view.component.html
+++ b/src/app/core/components/sidenav/components/header/components/date-view/components/year-view/year-view.component.html
@@ -6,10 +6,10 @@
     </span>
     <chevron (click)="dateControl.nextYear()" direction="right"></chevron>
 </div>
-<div class="flex items-center justify-center gap-2 mt-2">
+<div class="absolute inset-0 m-auto top-14 flex items-center justify-center gap-2 mt-2">
     <span class="month-label text-xs flex items-center justify-center gap-0.5 border-2 border-primary text-primary p-2 rounded-3xl cursor-pointer
         hover:bg-gray-100
-        dark:border-gray-200 dark:text-gray-200 dark:hover:bg-gray-700" 
+        dark:border-text-dark dark:text-text-dark dark:hover:bg-hover-dark" 
         *ngFor="let month of months ; let i = index"
         (click)="dateControl.changeMonth(i)"
         [class.active]="(dateControl.getMonthLabel() | async) === month">
