--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -26,7 +26,7 @@
             </nav>
         </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content class="min-h-screen bg-white dark:bg-gray-900">
+    <mat-sidenav-content class="min-h-screen bg-white dark:bg-[#191919]">
         <header-component>
             <mat-icon *ngIf="isMobile" (click)="toggleMenu()">menu</mat-icon>
         </header-component>
