--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -1,17 +1,21 @@
 :host ::ng-deep {
     mat-sidenav-container {
         mat-sidenav {
-            @apply border-0 bg-sidenav;
+            @apply border-0 dark:border-0 bg-sidenav dark:bg-sidenav-dark;
 
             &.mat-drawer-opened {
-                @apply w-[250px];
+                @apply w-[250px] dark:border-r dark:border-r-gray-950;
             }
 
             mat-nav-list ul li {
                 @apply text-text dark:text-text-dark flex items-center justify-start gap-2 px-2 py-2 mx-3 rounded-lg cursor-pointer text-sm;
 
                 &.active, &:hover {
-                    @apply bg-[#00000008] dark:bg-primary;
+                    @apply bg-[#00000008] dark:bg-hover-dark;
+                }
+
+                &.active {
+                    @apply font-semibold;
                 }
             }
         }
