--- a/src/app/shared/fin-ui/page-header/page-header.component.html
+++ b/src/app/shared/fin-ui/page-header/page-header.component.html
@@ -1,4 +1,4 @@
-<header class="flex items-center justify-between text-gray-600 w-full pb-12">
+<header class="flex items-center justify-between text-text dark:text-text-dark w-full pb-12">
     <div class="flex items-center gap-3 justify-center">
       <mat-icon>{{ icon }}</mat-icon>
       <h1 class="text-2xl">{{ title }}</h1>
