--- a/src/app/views/bank-accounts/components/bank-account-modal/bank-account-modal.component.html
+++ b/src/app/views/bank-accounts/components/bank-account-modal/bank-account-modal.component.html
@@ -1,18 +1,14 @@
 <div class="bg-white rounded-lg shadow-lg w-full max-w-lg p-6">
   <div class="flex justify-between items-center mb-4">
-    <h2 class="text-xl font-semibold">Cadastrar conta bancária</h2>
+    <h2 class="text-xl font-semibold">{{ formGroup.get('bankAccountId')?.value ? 'Atualizar conta bancária' : 'Nova conta bancária' }}</h2>
     <span class="flex items-center justify-center rounded-full p-3 w-2 h-2 duration-200 hover:bg-gray-100">
       <button (click)="close()" class="text-gray-500 hover:text-gray-700 focus:outline-none">&times;</button>
     </span>
   </div>
 
   <form class="pt-4" [formGroup]="formGroup">
-    <div class="input-group">
-      <fin-input label="Nome" name="name" placeholder="Itaú" required formControlName="name" />
-    </div>
-    <div class="input-group">
-      <fin-input label="Valor inicial" currency name="initialAmount" placeholder="R$ 12.99" required formControlName="initialAmount" />
-    </div>
+    <fin-input label="Nome" name="name" placeholder="Itaú" required formControlName="name" />
+    <fin-input label="Valor inicial" currency name="initialAmount" placeholder="R$ 12.99" required formControlName="initialAmount" />
 
     <div class="flex justify-end">
       <fin-button (click)="submit()" >Enviar</fin-button>
