--- a/src/app/views/bank-accounts/bank-accounts.component.html
+++ b/src/app/views/bank-accounts/bank-accounts.component.html
@@ -28,7 +28,7 @@
                                     <mat-icon class="material-symbols-outlined">edit</mat-icon>
                                     <span>Editar</span>
                                 </button>
-                                <button mat-menu-item>
+                                <button (click)="delete(account)" mat-menu-item>
                                     <mat-icon class="material-symbols-outlined">delete</mat-icon>
                                     <span>Apagar</span>
                                 </button>
