--- a/src/app/views/not-found/not-found.component.html
+++ b/src/app/views/not-found/not-found.component.html
@@ -1,4 +1,4 @@
-<section class="flex-center min-w-full h-full flex-col bg-white">
+<section class="flex-center min-w-full h-full flex-col bg-white dark:bg-[#191919]">
     <h1 class="text-text dark:text-white text-5xl font-black">404</h1>
     <p class="text-center text-text dark:text-text-dark text-base mb-6">Página não encontrada :(</p>
     <button [routerLink]="['/dashboard']" class="bg-primary text-white py-2 px-4 rounded-lg text-sm font-bold">
