--- a/src/app/shared/fin-forms/fin-input/fin-input.component.scss
+++ b/src/app/shared/fin-forms/fin-input/fin-input.component.scss
@@ -1,17 +1,18 @@
 :host {
+    input {
+        @apply h-full border border-gray-300 bg-white text-gray-900 text-sm rounded-lg block w-full p-2.5 
+            dark:bg-sidenav-dark dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
+            focus:ring-1 focus:outline-none focus:ring-primary focus:border-primary dark:focus:ring-primary dark:focus:border-primary;
+    }
+
     &.ng-touched.ng-invalid {
         input {
-            @apply border-error;
+            @apply border-error 
+            focus:ring-1 focus:outline-none focus:ring-error focus:border-error dark:focus:ring-error dark:focus:border-error;
 
             &::placeholder {
                 // color: red;
             }
         }
-    }
-
-    input {
-        @apply h-full border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 
-            dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
-            focus:ring-1 focus:outline-none focus:ring-primary focus:border-primary dark:focus:ring-primary dark:focus:border-primary;
     }
 }
