--- a/src/app/views/bank-accounts/components/bank-account-modal/bank-account-modal.component.html
+++ b/src/app/views/bank-accounts/components/bank-account-modal/bank-account-modal.component.html
@@ -1,8 +1,8 @@
-<div class="bg-white rounded-lg shadow-lg w-full max-w-lg p-6">
+<div class="p-6">
   <div class="flex justify-between items-center mb-4">
     <h2 class="text-xl font-semibold">{{ formGroup.get('bankAccountId')?.value ? 'Atualizar conta bancária' : 'Nova conta bancária' }}</h2>
-    <span class="flex items-center justify-center rounded-full p-3 w-2 h-2 duration-200 hover:bg-gray-100">
-      <button (click)="close()" class="text-gray-500 hover:text-gray-700 focus:outline-none">&times;</button>
+    <span class="cursor-pointer flex items-center justify-center rounded-full p-3 w-2 h-2 duration-200 hover:bg-hover-dark">
+      <button (click)="close()" class="focus:outline-none">&times;</button>
     </span>
   </div>
 
