--- a/src/app/views/dashboard/components/incomes-card/incomes-card.component.html
+++ b/src/app/views/dashboard/components/incomes-card/incomes-card.component.html
@@ -1,15 +1,15 @@
 <div class="flex gap-4 p-6">
-    <div class="bg-white w-full h-full rounded-xl flex flex-col">
-        <p class=" text-sm text-gray-500 flex items-center">Receitas </p>
-        <div class="w-full h-0.5 bg-gray-200 mt-1 mb-2"></div>
+    <div class="w-full h-full rounded-xl flex flex-col">
+        <p class=" text-sm font-bold flex items-center">Receitas </p>
+        <div class="w-full h-0.5 bg-gray-200 dark:bg-hover-dark mt-1 mb-2"></div>
         <div class="flex items-center justify-between w-full">
             <div class="flex flex-col">
-                <span class="text-gray-600">Recebido</span>
-                <span class="text-gray-800">Previsto</span>
+                <span>Recebido</span>
+                <span>Previsto</span>
             </div>
             <div class="flex flex-col">
-                <span class="font-bold text-green-600">R$ 2,562.20</span>
-                <span class="font-bold text-gray-800">R$ 5,562.20</span>
+                <span class="font-bold text-success">R$ 2,562.20</span>
+                <span class="font-bold">R$ 5,562.20</span>
             </div>
         </div>
     </div>
