--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,19 +1,19 @@
 <section class="w-[65%] flex flex-col gap-4">
     <div class="flex gap-4 h-[17%]">
-        <balance-card class="w-full bg-white border border-gray-200 rounded-xl col-span-2" />
-        <incomes-card class="w-full bg-white border border-gray-200 rounded-xl"/>
-        <expenses-card class="w-full bg-white border border-gray-200 rounded-xl"/>
+        <balance-card class="card col-span-2" />
+        <incomes-card class="card"/>
+        <expenses-card class="card"/>
     </div>
-    <div class="flex gap-4 h-[83%] border border-gray-200 rounded-xl bg-white">
+    <div class="card flex gap-4 h-[83%]">
         a
     </div>
 </section>
 
 <section class="w-[35%] flex flex-col gap-4">
-    <div class="flex gap-4 h-[50%] bg-white">
+    <div class="card flex gap-4 h-[50%]">
         a
     </div>
-    <div class="flex gap-4 h-[50%] bg-white">
+    <div class="card flex gap-4 h-[50%]">
         a
     </div>
 </section>
